--- a/_includes/swc/setup.html
+++ b/_includes/swc/setup.html
@@ -3,9 +3,13 @@
 {% include warning-curriculum.html %}
 {% endunless %}
 
+{% comment %}
+Commented this part out since the workshop is only covering R.
+
 {% include install_instructions/shell.html %}
 {% include install_instructions/git.html %}
 {% include install_instructions/editor.html %}
+{% endcomment %}
 
 {% if site.flavor == "r" %}
 {% include install_instructions/r.html %}
