--- a/_includes/custom-schedule.html
+++ b/_includes/custom-schedule.html
@@ -7,63 +7,66 @@
         <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
       <tr>               <!-- row 2   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
+        <td></td>        <!-- 9:00 am - 10:30 am    -->
+        <td></td>        <!-- Introduction to R and R Studio, Reading and Writing CSV files -->
       </tr>
       <tr>               <!-- row 3   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
+        <td></td>        <!-- 10:30 am - 11:00 am   -->
+        <td></td>        <!-- Morning Break -->
       </tr>
+      <tr>               <!-- row 4   -->
+        <td></td>        <!-- 11:00 am - 12:00 pm   -->
+        <td></td>        <!-- Data Types and Structures, Understanding Factors -->
+      </tr>
+      <tr>               <!-- row 5   -->
+        <td></td>        <!-- 12:00 pm - 1:00 pm   -->
+        <td></td>        <!-- Lunch -->
+      </tr>
+      <tr>               <!-- row 6   -->
+        <td></td>        <!-- 1:00 pm - 2:30 pm    -->
+        <td></td>        <!-- Addressing Data, Data Frame Manipulation with dplyr -->
+      </tr>
+      <tr>               <!-- row 7   -->
+        <td></td>        <!-- 2:30 pm - 3:00 pm   -->
+        <td></td>        <!-- Afternoon Break -->
+      </tr>
+      <tr>               <!-- row 8   -->
+        <td></td>        <!-- 3:00 pm - 5:00 pm   -->
+        <td></td>        <!-- Data Frame Manipulation with tidyr, Creating Functions -->
     </table>
   </div>
   <div class="col-md-6"> <!-- right column -->
     <h3>Day 2</h3>
     <table class="table table-striped">
       <tr>               <!-- row 1   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
+        <td></td>        <!-- 9:00 am - 10:30 am    -->
+        <td></td>        <!-- The Call Stack, Control Flow -->
       </tr>
       <tr>               <!-- row 2   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
+        <td></td>        <!-- 10:30 am - 11:00 am    -->
+        <td></td>        <!-- Morning Break -->
       </tr>
       <tr>               <!-- row 3   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
+        <td></td>        <!-- 11:00 am - 12:00 pm    -->
+        <td></td>        <!-- Loops in R -->
       </tr>
-    </table>
-  </div>
-</div>
-<div class="row">        <!-- days 3 and 4 -->
-  <div class="col-md-6"> <!-- left column -->
-    <h3>Day 3</h3>
-    <table class="table table-striped">
-      <tr>               <!-- row 1   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
+      <tr>               <!-- row 4   -->
+        <td></td>        <!-- 12:00 pm - 1:00 pm   -->
+        <td></td>        <!-- Lunch -->
       </tr>
-      <tr>               <!-- row 2   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
+      <tr>               <!-- row 5   -->
+        <td></td>        <!-- 1:00 pm - 2:30 pm   -->
+        <td></td>        <!-- Best Practices for Writing R Code, Analyzing Multiple Data Sets -->
       </tr>
-      <tr>               <!-- row 3   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
+      <tr>               <!-- row 6   -->
+        <td></td>        <!-- 2:30 pm - 3:00 pm    -->
+        <td></td>        <!-- Afternoon Break -->
       </tr>
-    </table>
-  </div>
-  <div class="col-md-6"> <!-- right column -->
-    <h3>Day 4</h3>
-    <table class="table table-striped">
-      <tr>               <!-- row 1   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
+      <tr>               <!-- row 7   -->
+        <td></td>        <!-- 3:00 pm - 5:00 pm   -->
+        <td></td>        <!-- Graphics with ggplot2, Reports with knitr, Analyzing Patient Data -->
       </tr>
-      <tr>               <!-- row 2   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
-      </tr>
-      <tr>               <!-- row 3   -->
+      <tr>               <!-- row 8   -->
         <td>End</td>
         <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
       </tr>
