--- a/_includes/custom-schedule.html
+++ b/_includes/custom-schedule.html
@@ -7,8 +7,8 @@
         <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
       <tr>               <!-- row 2   -->
-        <td></td>        <!-- 9:00 am - 10:30 am    -->
-        <td></td>        <!-- Introduction to R and R Studio, Reading and Writing CSV files -->
+        <td>9:00 am - 10:30 am</td>        <!-- 9:00 am - 10:30 am    -->
+        <td>Introduction to R and R Studio, Reading and Writing CSV files</td>        <!-- Introduction to R and R Studio, Reading and Writing CSV files -->
       </tr>
       <tr>               <!-- row 3   -->
         <td></td>        <!-- 10:30 am - 11:00 am   -->
