--- a/_includes/custom-schedule.html
+++ b/_includes/custom-schedule.html
@@ -15,56 +15,56 @@
         <td>Morning Break</td>
       </tr>
       <tr>               <!-- row 4   -->
-        <td></td>        <!-- 11:00 am - 12:00 pm   -->
-        <td></td>        <!-- Data Types and Structures, Understanding Factors -->
+        <td>11:00 am - 12:00 pm</td>
+        <td>Data Types and Structures, Understanding Factors</td>
       </tr>
       <tr>               <!-- row 5   -->
-        <td></td>        <!-- 12:00 pm - 1:00 pm   -->
-        <td></td>        <!-- Lunch -->
+        <td>12:00 pm - 1:00 pm</td>        
+        <td>Lunch</td>        
       </tr>
       <tr>               <!-- row 6   -->
-        <td></td>        <!-- 1:00 pm - 2:30 pm    -->
-        <td></td>        <!-- Addressing Data, Data Frame Manipulation with dplyr -->
+        <td>1:00 pm - 2:30 pm</td>        
+        <td>Addressing Data, Data Frame Manipulation with dplyr</td>        
       </tr>
       <tr>               <!-- row 7   -->
-        <td></td>        <!-- 2:30 pm - 3:00 pm   -->
-        <td></td>        <!-- Afternoon Break -->
+        <td>2:30 pm - 3:00 pm</td>        
+        <td>Afternoon Break</td>        
       </tr>
       <tr>               <!-- row 8   -->
-        <td></td>        <!-- 3:00 pm - 5:00 pm   -->
-        <td></td>        <!-- Data Frame Manipulation with tidyr, Creating Functions -->
+        <td>3:00 pm - 5:00 pm</td>        
+        <td>Data Frame Manipulation with tidyr, Creating Functions</td>        
     </table>
   </div>
   <div class="col-md-6"> <!-- right column -->
     <h3>Day 2</h3>
     <table class="table table-striped">
       <tr>               <!-- row 1   -->
-        <td></td>        <!-- 9:00 am - 10:30 am    -->
-        <td></td>        <!-- The Call Stack, Control Flow -->
+        <td>9:00 am - 10:30 am</td>        
+        <td>The Call Stack, Control Flow</td>        
       </tr>
       <tr>               <!-- row 2   -->
-        <td></td>        <!-- 10:30 am - 11:00 am    -->
-        <td></td>        <!-- Morning Break -->
+        <td>10:30 am - 11:00 am</td>        
+        <td>Morning Break</td>        
       </tr>
       <tr>               <!-- row 3   -->
-        <td></td>        <!-- 11:00 am - 12:00 pm    -->
-        <td></td>        <!-- Loops in R -->
+        <td>11:00 am - 12:00 pm</td>        
+        <td>Loops in R</td>        
       </tr>
       <tr>               <!-- row 4   -->
-        <td></td>        <!-- 12:00 pm - 1:00 pm   -->
-        <td></td>        <!-- Lunch -->
+        <td>12:00 pm - 1:00 pm</td>        
+        <td>Lunch</td>        
       </tr>
       <tr>               <!-- row 5   -->
-        <td></td>        <!-- 1:00 pm - 2:30 pm   -->
-        <td></td>        <!-- Best Practices for Writing R Code, Analyzing Multiple Data Sets -->
+        <td>1:00 pm - 2:30 pm</td>        
+        <td>Best Practices for Writing R Code, Analyzing Multiple Data Sets</td>        
       </tr>
       <tr>               <!-- row 6   -->
-        <td></td>        <!-- 2:30 pm - 3:00 pm    -->
-        <td></td>        <!-- Afternoon Break -->
+        <td>2:30 pm - 3:00 pm</td>        
+        <td>Afternoon Break</td>        
       </tr>
       <tr>               <!-- row 7   -->
-        <td></td>        <!-- 3:00 pm - 5:00 pm   -->
-        <td></td>        <!-- Graphics with ggplot2, Reports with knitr, Analyzing Patient Data -->
+        <td>3:00 pm - 5:00 pm</td>        
+        <td>Graphics with ggplot2, Reports with knitr, Analyzing Patient Data</td>        
       </tr>
       <tr>               <!-- row 8   -->
         <td>End</td>
