--- a/_includes/custom-schedule.html
+++ b/_includes/custom-schedule.html
@@ -1,76 +1,29 @@
-<div class="row">        <!-- first two days -->
+<div class="row">
   <div class="col-md-6"> <!-- left column -->
     <h3>Day 1</h3>
     <table class="table table-striped">
-      <tr>               <!-- row 1   -->
-        <td>Before starting</td>
-        <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
-      </tr>
-      <tr>               <!-- row 2   -->
-        <td>9:00 am - 10:30 am</td>
-        <td>Introduction to R and R Studio, Reading and Writing CSV files</td>
-      </tr>
-      <tr>               <!-- row 3   -->
-        <td>10:30 am - 11:00 am</td>
-        <td>Morning Break</td>
-      </tr>
-      <tr>               <!-- row 4   -->
-        <td>11:00 am - 12:00 pm</td>
-        <td>Data Types and Structures, Understanding Factors</td>
-      </tr>
-      <tr>               <!-- row 5   -->
-        <td>12:00 pm - 1:00 pm</td>        
-        <td>Lunch</td>        
-      </tr>
-      <tr>               <!-- row 6   -->
-        <td>1:00 pm - 2:30 pm</td>        
-        <td>Addressing Data, Data Frame Manipulation with dplyr</td>        
-      </tr>
-      <tr>               <!-- row 7   -->
-        <td>2:30 pm - 3:00 pm</td>        
-        <td>Afternoon Break</td>        
-      </tr>
-      <tr>               <!-- row 8   -->
-        <td>3:00 pm - 5:00 pm</td>        
-        <td>Data Frame Manipulation with tidyr, Creating Functions</td>        
+      <tr> <td>Before starting</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td> </tr>
+      <tr> <td>9:00 am - 10:30 am</td><td>Introduction to R and R Studio, Reading and Writing CSV files</td> </tr>
+      <tr> <td>10:30 am - 11:00 am</td> <td>Morning Break</td> </tr>
+      <tr> <td>11:00 am - 12:00 pm</td> <td>Data Types and Structures, Understanding Factors</td> </tr>
+      <tr> <td>12:00 pm - 1:00 pm</td> <td>Lunch</td> </tr>
+      <tr> <td>1:00 pm - 2:30 pm</td> <td>Addressing Data, Data Frame Manipulation with dplyr</td> </tr>
+      <tr> <td>2:30 pm - 3:00 pm</td> <td>Afternoon Break</td> </tr>
+      <tr> <td>3:00 pm - 5:00 pm</td> <td>Data Frame Manipulation with tidyr, Creating Functions</td> </tr>      
     </table>
   </div>
   
   <div class="col-md-6"> <!-- right column -->
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr>               <!-- row 1   -->
-        <td>9:00 am - 10:30 am</td>        
-        <td>The Call Stack, Control Flow</td>        
-      </tr>
-      <tr>               <!-- row 2   -->
-        <td>10:30 am - 11:00 am</td>        
-        <td>Morning Break</td>        
-      </tr>
-      <tr>               <!-- row 3   -->
-        <td>11:00 am - 12:00 pm</td>        
-        <td>Loops in R</td>        
-      </tr>
-      <tr>               <!-- row 4   -->
-        <td>12:00 pm - 1:00 pm</td>        
-        <td>Lunch</td>        
-      </tr>
-      <tr>               <!-- row 5   -->
-        <td>1:00 pm - 2:30 pm</td>        
-        <td>Best Practices for Writing R Code, Analyzing Multiple Data Sets</td>        
-      </tr>
-      <tr>               <!-- row 6   -->
-        <td>2:30 pm - 3:00 pm</td>        
-        <td>Afternoon Break</td>        
-      </tr>
-      <tr>               <!-- row 7   -->
-        <td>3:00 pm - 5:00 pm</td>        
-        <td>Graphics with ggplot2, Reports with knitr, Analyzing Patient Data</td>        
-      </tr>
-      <tr>               <!-- row 8   -->
-        <td>End</td>
-        <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
-      </tr>
+      <tr> <td>9:00 am - 10:30 am</td> <td>The Call Stack, Control Flow</td> </tr>
+      <tr> <td>10:30 am - 11:00 am</td> <td>Morning Break</td> </tr>
+      <tr> <td>11:00 am - 12:00 pm</td> <td>Loops in R</td> </tr>
+      <tr> <td>12:00 pm - 1:00 pm</td> <td>Lunch</td> </tr>
+      <tr> <td>1:00 pm - 2:30 pm</td> <td>Best Practices for Writing R Code, Analyzing Multiple Data Sets</td> </tr>
+      <tr> <td>2:30 pm - 3:00 pm</td> <td>Afternoon Break</td> </tr>
+      <tr> <td>3:00 pm - 5:00 pm</td> <td>Graphics with ggplot2, Reports with knitr, Analyzing Patient Data</td> </tr>
+      <tr> <td>End</td> <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td> </tr>
     </table>
   </div>
 </div>
